--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
     "react": "^18.2.0",
+    "react-clock": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
