--- a/backend_sak/package.json
+++ b/backend_sak/package.json
@@ -10,8 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.15",
     "@types/node": "^20.8.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "sqlite3": "^5.1.6"
   }
 }
