--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "proxy": "http://localhost:3001",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.23.4",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.12",
+    "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
