--- a/backend/package.json
+++ b/backend/package.json
@@ -11,14 +11,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.15",
-    "@types/node": "^20.8.7",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.4",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "sqlite3": "^5.1.6"
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.6",
+    "uuidv4": "^6.2.13"
   }
 }
-
